src/snapshots/rmcp_openapi__tool_generator__tests__test_multipart_non_file_fields_unchanged.snap
---
source: src/tool_generator.rs
expression: schema
---
{
  "type": "object",
  "properties": {
    "title": {
      "type": "string",
      "description": "Form title"
    },
    "count": {
      "type": "integer",
      "description": "Item count"
    },
    "enabled": {
      "type": "boolean",
      "description": "Enable flag"
    },
    "price": {
      "type": "number",
      "description": "Price value"
    },
    "uuid": {
      "type": "string",
      "description": "UUID field",
      "format": "uuid"
    },
    "date": {
      "type": "string",
      "description": "Date field",
      "format": "date"
    }
  },
  "required": [
    "title"
  ],
  "description": "Form submission"
}
