src/snapshots/rmcp_openapi__tool_generator__tests__test_property_sanitization_with_annotations.snap
---
source: src/tool_generator.rs
expression: result
---
{
  "type": "object",
  "properties": {
    "user_name": {
      "type": "string"
    },
    "price": {
      "type": "number"
    },
    "validName": {
      "type": "string"
    }
  },
  "additionalProperties": true
}
