src/snapshots/rmcp_openapi__tool_generator__tests__test_request_body_simple_object_with_properties.snap
---
source: src/tool_generator.rs
expression: request_body_schema
---
{
  "type": "object",
  "properties": {
    "status": {
      "type": "string"
    },
    "reason": {
      "type": "string"
    }
  },
  "required": [
    "status"
  ],
  "additionalProperties": true,
  "description": "Pet status update"
}
