src/snapshots/rmcp_openapi__tool_generator__tests__test_request_body_with_nested_properties.snap
---
source: src/tool_generator.rs
expression: request_body_schema
---
{
  "type": "object",
  "properties": {
    "name": {
      "type": "string"
    },
    "age": {
      "type": "integer",
      "minimum": 0,
      "maximum": 150
    }
  },
  "required": [
    "name"
  ],
  "additionalProperties": true,
  "description": "User creation data"
}
